--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,5 +7,5 @@ phases:
       - ./gradlew assembleDebug
 artifacts:
   files:
-     - './android/app/build/outputs/**/*.apk'
+     - './MyApplication/app/build/outputs/apk/debug/*.apk'
   discard-paths: yes
